--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 PySide6>=6.5.0
-PyQt-Fluent-Widgets>=1.3.0
+PyQt6-Fluent-Widgets>=1.3.0
+requests>=2.28.0
 ffmpeg-python>=0.2.0
 Pillow>=9.0.0
 python-docx>=0.8.11
