--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 PyQt6>=6.5.0
 PyQt6-Fluent-Widgets>=1.3.0
+PyQt6-Qt6>=6.5.0
+PyQt6-WebEngine>=6.5.0
 requests>=2.28.0
 ffmpeg-python>=0.2.0
-Pillow>=9.0.0
 python-docx>=0.8.11
+Pillow>=9.0.0
 pdf2docx>=0.5.6
 openpyxl>=3.0.10
 moviepy>=1.0.3
 img2pdf>=0.4.4
 PyMuPDF>=1.23.0
 python-pptx>=0.6.21
-numpy<2.0.0 
+numpy>=1.24.0
+opencv-python>=4.8.0
+scipy>=1.11.0
+pandas>=2.0.0
+matplotlib>=3.7.0 
