--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-PyQt6>=6.5.0
-PyQt6-Fluent-Widgets>=1.3.0
+PySide6>=6.5.0
+PySide6-Fluent-Widgets>=1.3.0
 pillow>=9.0.0
 python-docx>=0.8.11
 pdf2docx>=0.5.6
